Disable unstable CliFallbackAndLookupTest
Signed-off-by: Vasyl Razinkov <vasyl.razinkov@est.tech>
Issue-ID: SDC-3490
Change-Id: I48f502125c3fb23f880f7c318f540b4396b5754e